Frontend / Styling - Login, home and scrollbar styles done To Do: resolve problem NG0100

--- a/FRONTEND/src/app/public/login/containers/login.component.css
+++ b/FRONTEND/src/app/public/login/containers/login.component.css
@@ -28,7 +28,7 @@
     border-radius: 10px;
     background-color: var(--primary-color);
     color: var(--color-white);
-    padding: 16px;
+    padding: 30px;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.61);
     width: 100%;
     min-height: 400px;
@@ -44,7 +44,7 @@
         box-shadow: none;
         min-height: unset;
         border-radius: unset;
-        padding: 20px;
+        padding: 20px 40px;
     }
 }
 .right-column{
@@ -78,7 +78,7 @@ h2{
 
 .formulario{
     background-color: var(--color-white);
-    padding: 16px;
+    padding: 30px;
     border-radius: 10px;
     width: 100%;
     max-width: 600px;
@@ -87,10 +87,12 @@ h2{
 }
 @media (max-width: 768px) {
     .formulario{
+        padding: 16px;
         width: 95%;
     }
     .right-column{
         padding: 0;
+        padding-top: 64px;
     }
 
 }
