--- a/FRONTEND/src/app/registered/home/containers/home.component.css
+++ b/FRONTEND/src/app/registered/home/containers/home.component.css
@@ -1,15 +1,38 @@
 
 .tarjeta {
-    min-width: 400px;
-    max-width: 500px;
     height: fit-content;
 }
 
-
 .contenedor {
     height: 100%;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     gap: 16px;
-    flex-wrap: wrap;
     padding: 16px;
+}
+mat-card-actions{
+    padding: 16px;
+}
+@media (max-width: 1500px) {
+    .contenedor {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+@media (max-width: 1200px) {
+    .contenedor {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 768px){
+    .contenedor {
+        grid-template-columns: 1fr;
+    }
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    max-height: 300px;
+    object-fit: cover;
 }
